C/sofa.h


void iauBp00(double date1, double date2,
             double rb[3][3], double rp[3][3], double rbp[3][3]);

void iauBp06(double date1, double date2,
             double rb[3][3], double rp[3][3], double rbp[3][3]);

void iauC2i06a(double date1, double date2, double rc2i[3][3]);

void iauC2ixy(double date1, double date2, double x, double y,
              double rc2i[3][3]);

void iauC2ixys(double x, double y, double s, double rc2i[3][3]);

void iauC2t06a(double tta, double ttb, double uta, double utb,
               double xp, double yp, double rc2t[3][3]);

void iauC2tcio(double rc2i[3][3], double era, double rpom[3][3],
               double rc2t[3][3]);

void iauLtp(double epj, double rp[3][3]);

void iauLtpb(double epj, double rpb[3][3]);

void iauLtpecl(double epj, double vec[3]);

void iauLtpequ(double epj, double veq[3]);

void iauPfw06(double date1, double date2,
              double *gamb, double *phib, double *psib, double *epsa);

void iauPmat00(double date1, double date2, double rbp[3][3]);

void iauXys00a(double date1, double date2,
               double *x, double *y, double *s);

void iauXys00b(double date1, double date2,
               double *x, double *y, double *s);

void iauXys06a(double date1, double date2,
               double *x, double *y, double *s);